Compilador_Final/tests/invalid/test_e06_aterrizar_sin_vuelo.drone
// Test con error 6: aterrizar sin haber despegado (error semántico)
drone pegasus;

mision aterrizar_sin_vuelo {
    aterrizar pegasus;
}
